<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@drawable/ic_navigate_before_white_24dp"
            app:theme="@style/MyActionBar"
            app:title="並べ替え問題" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="第○問/10問中" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="_ _ _ _ _ _ _ _ _ _ _ " />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="12dp"
            android:paddingRight="32dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewBetty2"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/betty_clear" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/fukidashi_green"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textViewBetty2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="次の日本語の意味に合うように単語を順番にタップしてね。"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/textViewQuestionCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="第１問" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewQuestionJapanese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.9"
                android:maxLines="3"
                android:text="私は中学生です。" />

            <Button
                android:id="@+id/imageViewBackSpace"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="0.1"
                android:background="@drawable/button_back_space"
                android:gravity="center"
                android:text="×"
                android:textAlignment="center"
                android:textColor="@color/whiteText"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="I" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewQuestion1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/answer_one" />

            <TextView
                android:id="@+id/textViewQuestion2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/answer_two" />

            <TextView
                android:id="@+id/textViewQuestion3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/answer_three" />

            <TextView
                android:id="@+id/textViewQuestion4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/answer_four" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewAfter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="school student." />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="am"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="junior"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="I"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">


            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="high"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="you"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="elementary"
                android:textAllCaps="false" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonDecide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primary_dark"
            android:text="決定"
            android:textColor="@color/whiteText" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>